@@ -50,6 +50,7 @@ export("+.section",
        findBottom,
        findInOrdered,
        formatCI,
+       formatPosition,
        fullFilename,
        geodDist,
        geodXy,
